k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payday
  labels:
    app.kubernetes.io/managed-by: argocd
    environment: local
